--- a/TestOpenForecast/Base.lproj/Main.storyboard
+++ b/TestOpenForecast/Base.lproj/Main.storyboard
@@ -1,24 +1,205 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="5gb-kT-riz">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--MapVC-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="MapVC" customModule="TestOpenForecast" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="X3B-Ac-hwy">
+                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
+                            </mapView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="X3B-Ac-hwy" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="BYc-be-8RY"/>
+                            <constraint firstItem="X3B-Ac-hwy" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Gfz-Mq-O3J"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="X3B-Ac-hwy" secondAttribute="bottom" id="HtA-SO-xRu"/>
+                            <constraint firstItem="X3B-Ac-hwy" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="rNp-bm-dN0"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" id="av4-nH-cQx"/>
+                    <connections>
+                        <outlet property="worldMapView" destination="X3B-Ac-hwy" id="2T2-cm-dnN"/>
+                        <segue destination="Snh-35-5TK" kind="show" identifier="kShowDetail" id="Fek-15-yrt"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1076" y="133.5832083958021"/>
+        </scene>
+        <!--DetailVC-->
+        <scene sceneID="6yr-2n-aBb">
+            <objects>
+                <viewController storyboardIdentifier="forecastVC" id="Snh-35-5TK" customClass="DetailVC" customModule="TestOpenForecast" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="bJY-ro-8S1">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="CDV-mj-Yhl">
+                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="forecastCell" id="aNd-jn-11j" customClass="ForecastTableViewCell" customModule="TestOpenForecast" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="aNd-jn-11j" id="AZX-LS-7tw">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8yI-Xp-EBT">
+                                                    <rect key="frame" x="15" y="0.0" width="62" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                    <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XWy-Eb-pjl">
+                                                    <rect key="frame" x="15" y="20" width="104" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DnB-PZ-haO">
+                                                    <rect key="frame" x="301" y="12" width="59" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Sex-gq-JST">
+                                                    <rect key="frame" x="249" y="-1" width="47" height="44"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7gy-MY-Cmm">
+                                                    <rect key="frame" x="98" y="12" width="143" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                                    <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="dateLabel" destination="8yI-Xp-EBT" id="JTd-jk-Lde"/>
+                                            <outlet property="descriptionLabel" destination="7gy-MY-Cmm" id="iNW-zL-CDb"/>
+                                            <outlet property="iconView" destination="Sex-gq-JST" id="f5P-lv-KMr"/>
+                                            <outlet property="temperatureLabel" destination="DnB-PZ-haO" id="4wn-2Q-uh1"/>
+                                            <outlet property="timeLabel" destination="XWy-Eb-pjl" id="VMx-Mh-9tk"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="Snh-35-5TK" id="tED-Nq-Zwq"/>
+                                    <outlet property="delegate" destination="Snh-35-5TK" id="Pjr-si-faf"/>
+                                </connections>
+                            </tableView>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="92T-3K-Z9z">
+                                <rect key="frame" x="169" y="315" width="37" height="37"/>
+                                <color key="color" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </activityIndicatorView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="92T-3K-Z9z" firstAttribute="centerX" secondItem="bJY-ro-8S1" secondAttribute="centerX" id="92O-5P-exl"/>
+                            <constraint firstItem="CDV-mj-Yhl" firstAttribute="top" secondItem="oL5-YL-Llb" secondAttribute="top" id="IQU-gp-dA0"/>
+                            <constraint firstItem="CDV-mj-Yhl" firstAttribute="leading" secondItem="oL5-YL-Llb" secondAttribute="leading" id="KtO-mM-vk6"/>
+                            <constraint firstItem="CDV-mj-Yhl" firstAttribute="trailing" secondItem="oL5-YL-Llb" secondAttribute="trailing" id="Ptf-Lr-FOG"/>
+                            <constraint firstItem="CDV-mj-Yhl" firstAttribute="bottom" secondItem="oL5-YL-Llb" secondAttribute="bottom" id="R3c-fr-KYI"/>
+                            <constraint firstItem="92T-3K-Z9z" firstAttribute="centerY" secondItem="bJY-ro-8S1" secondAttribute="centerY" id="yWq-o7-Pf0"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="oL5-YL-Llb"/>
+                    </view>
+                    <connections>
+                        <outlet property="activityIndicator" destination="92T-3K-Z9z" id="2MF-TF-RYy"/>
+                        <outlet property="tableView" destination="CDV-mj-Yhl" id="Idk-Dz-KZw"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4oj-zz-6DR" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1928.8" y="133.5832083958021"/>
+        </scene>
+        <!--Forecast-->
+        <scene sceneID="lsq-RK-Ofu">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="PRc-a4-FOf" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Forecast" image="activeItem" selectedImage="activeItem" id="Tpb-Tu-EWa"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="fR1-DI-0c4">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="mpa-uu-0Au"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vAF-0z-Ngu" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1076" y="792.95352323838085"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="lak-Xr-kpI">
+            <objects>
+                <viewController id="ivv-2e-Lcz" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="gnc-BT-hcd">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Jd5-BF-Wmq">
+                                <rect key="frame" x="0.0" y="20" width="375" height="598"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="4IV-Gr-P4L" firstAttribute="bottom" secondItem="Jd5-BF-Wmq" secondAttribute="bottom" id="Erf-iP-f0S"/>
+                            <constraint firstItem="4IV-Gr-P4L" firstAttribute="trailing" secondItem="Jd5-BF-Wmq" secondAttribute="trailing" id="Gr2-tC-uyS"/>
+                            <constraint firstItem="Jd5-BF-Wmq" firstAttribute="leading" secondItem="4IV-Gr-P4L" secondAttribute="leading" id="USp-Pl-CT8"/>
+                            <constraint firstItem="Jd5-BF-Wmq" firstAttribute="top" secondItem="4IV-Gr-P4L" secondAttribute="top" id="kCm-Em-kwC"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="4IV-Gr-P4L"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" systemItem="history" id="ZP8-oa-dce"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="pqg-i7-ZQm" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1937" y="827"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="VrV-0w-TN8">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="5gb-kT-riz" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="j4i-ez-KSD">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="PRc-a4-FOf" kind="relationship" relationship="viewControllers" id="j2w-TM-6B0"/>
+                        <segue destination="ivv-2e-Lcz" kind="relationship" relationship="viewControllers" id="7gU-5C-yxh"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sSP-p9-7RT" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="136.80000000000001" y="792.95352323838085"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="activeItem" width="26" height="28"/>
+    </resources>
 </document>
